--- a/accounts/templates/home.html
+++ b/accounts/templates/home.html
@@ -3,7 +3,7 @@
 {% block contents %}
 <div class="row mt-5">
     <div class="col-12 text-center">
-        <h1>메인화면!!!</h1>
+        <h1>메인화면!~~~!!</h1>
     </div>
 </div>
 <div class="row mt-5">
