--- a/accounts/templates/index.html
+++ b/accounts/templates/index.html
@@ -20,6 +20,9 @@
         <div class="col-6">
             <button class="btn btn-primary btn-block text-center" onclick="location.href='/accounts/register/'">회원가입</button>
         </div>
+        <div class="col-6">
+          <button class="btn btn-primary btn-block text-center" onclick="location.href='/accounts/write/'">위치등록</button>
+      </div>
         {% endif %}
     </div>
     <header>
