--- a/cafemapapp/static/css/currentStudy.css
+++ b/cafemapapp/static/css/currentStudy.css
@@ -7,3 +7,8 @@
 }
 h2 { text-align: center; }
 body{ background-color: #D9D1C7;}
+button{
+    position: absolute;
+    top: 200px;
+    left: 200px;
+}
