해시태그 기능 및 디자인 수정

--- a/scainfoapp/static/css/home.css
+++ b/scainfoapp/static/css/home.css
@@ -1,5 +1,9 @@
-.card{
-    border: 1px solid #734A32;
+h2 { text-align: center; }
+
+
+div.card{
+  width: 500px;
+  border: 2px solid #734A32;
 }
 
 .star-ratings {
