area, main 연동 및 scainfoapp/views.py 코드 정리

--- a/area/templates/area/area.html
+++ b/area/templates/area/area.html
@@ -5,7 +5,7 @@
     <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-    <link href="./area.css" type="text/css" rel="stylesheet">
+    <link href="/static/css/area.css" type="text/css" rel="stylesheet">
 </head>
 <body>
     <nav class="minimalist-vertical-menu">
@@ -273,6 +273,6 @@
         </div>
 
     </nav>
-    <script src="./area.js"></script>
+    <script src="/static/javascript/area.js"></script>
 </body>
 </html>
