--- a/main/templates/main/main.html
+++ b/main/templates/main/main.html
@@ -1,6 +1,6 @@
 <head>
     <title>SCA CONNECT</title>
-    <link href="main.css" rel="stylesheet" type="text/css" />
+    <link href="/static/css/main.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
     <header id="header">
