--- a/scainfoapp/templates/scainfoapp/sort_star.html
+++ b/scainfoapp/templates/scainfoapp/sort_star.html
@@ -9,13 +9,14 @@
     </head>
     <body>
         <h2 style="text-align: center;">스터디카페 목록</h2>
+        
         <div class="sort" align="right">
-        <select title="" onchange="window.location.href=this.value">
-            <option value="http://127.0.0.1:8000/scainfo/all/" selected>기본 순</option>
-            <option value="http://127.0.0.1:8000/scainfo/sort_star/">별점 순</option>
-            <option value="http://127.0.0.1:8000/scainfo/sort_review/">리뷰 많은 순</option>
-        </select>
-    </div>
+            <select title="" onchange="window.location.href=this.value">
+                <option value="http://127.0.0.1:8000/scainfo/all/">기본 순</option>                
+                <option value="http://127.0.0.1:8000/scainfo/sort_star/" selected>별점 순</option>
+                <option value="http://127.0.0.1:8000/scainfo/sort_review/">리뷰 많은 순</option>
+            </select>
+        </div>
 
         <div class="tag" align="left">
         <form method='post' action='{% url 'hashtag' %}'>
@@ -28,7 +29,7 @@
 
         <div class="container">
             {% for sca in posts %}
-                <div class="card">
+                <div class="card" style="width: 700px; border: 2px solid #734A32; margin: auto;">
                     <div class="card-body">
                         {% comment %} <p>{{sca.id}}</p> {% endcomment %}
                         <h4 class="card-title">{{sca.name}}</h4>
@@ -70,15 +71,15 @@
                         <div style="text-align: center;">
                         
                         {% if posts.has_previous %}
-                            <a href="?page=1" style="text-decoration: none; color: black;">First | </a>
-                            <a href="?page={{posts.previous_page_number}}" style="text-decoration: none; color: black;">Prev </a>
+                            <a href="?page=1">맨 앞</a>
+                            <a href="?page={{posts.previous_page_number}}">이전</a>
                         {% endif %}
-                        <span> [ {{posts.number}}</span>
+                        <span>{{posts.number}}</span>
                         <span>/</span>
-                        <span>{{posts.paginator.num_pages}} ] </span>
+                        <span>{{posts.paginator.num_pages}}</span>
                         {% if posts.has_next %}
-                            <a href="?page={{posts.next_page_number}}" style="text-decoration: none; color: black;"> Next </a>
-                            <a href="?page={{posts.paginator.num_pages}}" style="text-decoration: none; color: black;">| Last</a>
+                            <a href="?page={{posts.next_page_number}}">다음</a>
+                            <a href="?page={{posts.paginator.num_pages}}">맨 뒤</a>
                         {% endif %}
                         </div>
                     </div>
