--- a/scainfoapp/templates/scainfoapp/sort_review.html
+++ b/scainfoapp/templates/scainfoapp/sort_review.html
@@ -29,7 +29,7 @@
 
         <div class="container">
             {% for sca in posts %}
-                <div class="card" style="width: 700px; border: 2px solid #734A32; margin: auto;">
+                <div class="card">
                     <div class="card-body">
                         {% comment %} <p>{{sca.id}}</p> {% endcomment %}
                         <h4 class="card-title">{{sca.name}}</h4>
