--- a/scainfoapp/templates/scainfoapp/search_result.html
+++ b/scainfoapp/templates/scainfoapp/search_result.html
@@ -20,7 +20,7 @@
 
         <div class="container">
             {% for sca in studycafes %}
-                <div class="card" style="width: 700px; border: 2px solid #734A32; margin: auto;">
+                <div class="card">
                     <div class="card-body">
                         {% comment %} <p>{{sca.id}}</p> {% endcomment %}
                         <h4 class="card-title">{{sca.name}}</h4>
