--- a/accounts/templates/main.html
+++ b/accounts/templates/main.html
@@ -1,4 +1,3 @@
-{% extends "base.html" %}
 {% block contents %}
 
 <html lang="ko">
@@ -8,10 +7,10 @@
 </head>
 <body>
     <header id="header">
-        <a href="main.html" class="logo">SCA CONNECT</a>
+        <a href="#" class="logo">SCA CONNECT</a>
         <ul>
             {% if request.session.user %}
-            <li><a href="#" class="active">주변</a></li>
+            <li><a href="#" class="active">주변</a></li>   
             <li><a href="#">지역</a></li>
             <li><a href="#">찜</a></li>
             <li><a href="#" onclick="location.href='/accounts/mypage/'">마이</a></li>
@@ -26,7 +25,7 @@
         </ul>
     </header>
     
-    <Section>
+    <section>
         <h2 id="text"><span>주변의 스터디카페를 찾아보세요</span><br><br>SCA CONNECT</h2>
         
         <img src="https://user-images.githubusercontent.com/65358991/170092504-132fa547-5ced-40e5-ab64-ded61518fac2.png" id="bird1">
@@ -36,7 +35,7 @@
         <a href="#" id="btn">찾아보기</a>
         
         <img src="https://user-images.githubusercontent.com/65358991/170092616-5a70c4af-2eed-496f-bde9-b5fcc7142a31.png" id="water">
-    </Section>
+    </section>
     
     <div class="sec">
         <h2>지역별로 찾아보기</h2>
@@ -49,7 +48,6 @@
         let bird1 = document.getElementById('bird1');
         let bird2 = document.getElementById('bird2');
         let btn = document.getElementById('btn');
-        let rocks = document.getElementById('rocks');
         let forest = document.getElementById('forest');
         let water = document.getElementById('water');
         let header = document.getElementById('header');
@@ -63,7 +61,6 @@
             bird1.style.top = value * -1.5 + 'px';
             bird1.style.left = value * -5 + 'px';
             btn.style.marginTop = value * 1.5 + 'px';
-            rocks.style.top = value * -.12 + 'px';
             forest.style.top = value * .25 + 'px';
             header.style.top = value * .5 + 'px';
         })
