--- a/accounts/templates/register.html
+++ b/accounts/templates/register.html
@@ -32,8 +32,14 @@
                         <label for="re_password" class="form-label">비밀번호</label>
                         <input type="password" class="form-control" id="re_password" placeholder="비밀번호 확인" name="re_password">
                     </div>
-                    <button type="submit" class="btn btn-primary">등록</button>
+                    <button type="submit" onclick="btn()" class="btn btn-primary">가입</button>
                 </form>
             </div>
+
+            <script>
+                function btn(){
+                    alert('회원가입 완료되었습니다.');
+                }
+            </script>
         </div>
         {% endblock %}
