지역, 찜, 찾아보기 버튼 링크 연결

--- a/area/templates/area/area.html
+++ b/area/templates/area/area.html
@@ -65,7 +65,7 @@
               <div class="dropdown-item"><a href=""><div style="overflow: hidden; text-overflow: ellipsis; -webkit-box-orient: vertical; display: -webkit-box; -webkit-line-clamp: 2;">수원역/구운/장안/세류</div></a></div>
               <div class="dropdown-item "><a href=""><div style="overflow: hidden; text-overflow: ellipsis; -webkit-box-orient: vertical; display: -webkit-box; -webkit-line-clamp: 2;">안양/평촌/인덕원/과천</div></a></div>
               <div class="dropdown-item "><a href=""><div style="overflow: hidden; text-overflow: ellipsis; -webkit-box-orient: vertical; display: -webkit-box; -webkit-line-clamp: 2;">성남/분당/위례</div></a></div>
-              <div class="dropdown-item "><a href=""><div style="overflow: hidden; text-overflow: ellipsis; -webkit-box-orient: vertical; display: -webkit-box; -webkit-line-clamp: 2;">용인</div></a></div>
+              <div class="dropdown-item "><a href="#" onclick="location.href='/scainfo/all/'"><div style="overflow: hidden; text-overflow: ellipsis; -webkit-box-orient: vertical; display: -webkit-box; -webkit-line-clamp: 2;">용인</div></a></div>
               <div class="dropdown-item "><a href=""><div style="overflow: hidden; text-overflow: ellipsis; -webkit-box-orient: vertical; display: -webkit-box; -webkit-line-clamp: 2;">동탄/화성/오산/병점</div></a></div>
               <div class="dropdown-item "><a href=""><div style="overflow: hidden; text-overflow: ellipsis; -webkit-box-orient: vertical; display: -webkit-box; -webkit-line-clamp: 2;">하남/광주/여주/이천</div></a></div>
               <div class="dropdown-item "><a href=""><div style="overflow: hidden; text-overflow: ellipsis; -webkit-box-orient: vertical; display: -webkit-box; -webkit-line-clamp: 2;">안산 중앙역</div></a></div>
