--- a/scainfoapp/templates/scainfoapp/all.html
+++ b/scainfoapp/templates/scainfoapp/all.html
@@ -31,12 +31,13 @@
                 <div class="card">
                     <div class="card-body">
                         {% comment %} <p>{{sca.id}}</p> {% endcomment %}
-                        <h4 class="card-title">{{sca.name}}</h4>
-                        <form method='post' action=''>
-                            {% csrf_token %}
-                            <input type="hidden" name="like_button" value="{{sca.id}}">
-                            <span><button class="btn btn-primary" type="submit">♡</button></span>
-                        </form>                       
+                        <h4 class="card-title">{{sca.name}}<div class="like" align="right">
+                            <form method='post' action=''>
+                                {% csrf_token %}
+                                <input type="hidden" name="like_button" value="{{sca.id}}">
+                                <span><button class="likebtn" type="submit">찜</button></span>
+                            </form> </div> </h4>
+                                             
                         
                         <p>{{sca.address}}</p>
                         <p>별점 :
@@ -54,7 +55,7 @@
                         </div>
 
                         <p>리뷰 :
-                            {{sca.review}}</p>
+                            {{sca.review}} <button onclick="location.href='/review/write'">리뷰 쓰기</button ></p>
                         <p>영업시간 :
                             {{sca.time}}</p>
                         <p>전화번호 :
