--- a/accounts/templates/main.html
+++ b/accounts/templates/main.html
@@ -11,8 +11,8 @@
         <ul>
             {% if request.session.user %}
             <li><a href="#" class="active">주변</a></li>   
-            <li><a href="#">지역</a></li>
-            <li><a href="#">찜</a></li>
+            <li><a href="#" onclick="location.href='/area/'">지역</a></li>
+            <li><a href="#" onclick="location.href='/scainfo/like/'">찜</a></li>
             <li><a href="#" onclick="location.href='/accounts/mypage/'">마이</a></li>
             <li><a href="#" onclick="location.href='/accounts/logout/'">로그아웃</a></li>
             <li><a href="#" onclick="location.href='/userlocation/write/'">위치등록</a></li>
@@ -32,7 +32,7 @@
         <img src="https://user-images.githubusercontent.com/65358991/170092542-9747edcc-fb51-4e21-aaf5-a61119393618.png" id="bird2">
         <img src="https://user-images.githubusercontent.com/65358991/170092559-883fe071-eb4f-4610-8c8b-a037d061c617.png" id="forest">
         
-        <a href="#" id="btn">찾아보기</a>
+        <a href="#" id="btn" onclick="location.href='/scamap/'">찾아보기</a>
         
         <img src="https://user-images.githubusercontent.com/65358991/170092616-5a70c4af-2eed-496f-bde9-b5fcc7142a31.png" id="water">
     </section>
