--- a/cafemapapp/static/css/studycafeMap.css
+++ b/cafemapapp/static/css/studycafeMap.css
@@ -1,19 +1,34 @@
 #map {
     width: 60%;
-    height: 800px;
-    position: absolute;
+    height: 750px;
+    margin: auto;
+    /* position: absolute;
     left: 50%;
-    transform: translateX(-50%);
-}
-h2 { text-align: center; }
-body{ background-color: #D9D1C7;}
-button{
-    position: absolute;
-    top: 200px;
-    left: 200px;
+    transform: translateX(-50%); */
+    border: #734A32 solid;
 }
 
-.info-title {
+.customoverlay {position:relative;bottom:85px;border-radius:6px;border: 1px solid #ccc;border-bottom:2px solid #ddd;float:left;}
+.customoverlay:nth-of-type(n) {border:0; box-shadow:0px 1px 2px #888;}
+.customoverlay a {display:block;text-decoration:none;color:#000;text-align:center;border-radius:6px;font-size:14px;font-weight:bold;overflow:hidden;background: #734A32;background: #734A32 url(https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/arrow_white.png) no-repeat right 14px center;}
+.customoverlay .title {display:block;text-align:center;background:#fff;margin-right:35px;padding:10px 15px;font-size:14px;font-weight:bold;}
+.customoverlay:after {content:'';position:absolute;margin-left:-12px;left:50%;bottom:-12px;width:22px;height:12px;background:url('https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/vertex_white.png')}
+
+h2 { text-align: center; }
+/* body{ background-color: #D9D1C7;} */
+.studybtn{
+    width:60%;
+    margin: auto;
+    margin-bottom: 2px;
+}
+
+button{
+    border: #734A32 solid;
+    background-color: #734A32;
+    color:#fff;
+}
+
+/* .info-title {
     display: block;
     background: #50627F;
     color: #fff;
@@ -22,4 +37,4 @@ button{
     line-height:22px;
     border-radius:4px;
     padding:0px 10px;
-}
+} */
