--- a/cafemapapp/templates/cafemapapp/scamap.html
+++ b/cafemapapp/templates/cafemapapp/scamap.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html>
     <head>
@@ -8,21 +6,20 @@
 
         <script src="http://code.jquery.com/jquery-latest.min.js"></script>
         <link rel="stylesheet" href='/static/css/studycafeMap.css'>
+        
+        
 
     </head>
     <body>
-        <h2>스터디카페 찾기</h2>
+        <h2>스터디카페 찾기</h2>        
+
+        <div class="studybtn" align="right">
+            <button onclick="location.href='/scainfo/all/'" >목록으로 보기</button >
+            <button onclick="location.href='/study/'" >개설 스터디 현황</button >
+            </div>
+
+
         <div id="map"></div>
-
-        <button onclick="location.href='http://3.34.49.180:8080/study'">개설 스터디 현황</button >
-        <style>
-            button {
-                position: absolute;
-                top: 10%;
-                left: 71%;
-            }
-        </style>
-
         <script
             type="text/javascript"
             src="//dapi.kakao.com/v2/maps/sdk.js?appkey=e5546ce50e2833e4db42b281b4b23109&libraries=services"></script>
@@ -32,7 +29,7 @@
                     center: new kakao
                         .maps
                         .LatLng(37.32191219571723, 127.12659496708484), // 지도의 중심좌표
-                    level: 3 // 지도의 확대 레벨
+                    level: 4 // 지도의 확대 레벨
                 };
 
             // 지도를 생성합니다
@@ -45,19 +42,23 @@
                 .maps
                 .services
                 .Geocoder();
-          
 
-            var scaaddress=new Array();
+            var sca = new Array();
+            let sca_dict = {};
             {% for studycafe in studycafe %}
-                scaaddress.push('{{studycafe.address}}');
-            {%endfor%} 
+                sca_dict = {
+                    'name': '{{studycafe.name}}',
+                    'address': '{{studycafe.address}}'
+                };
+                sca.push(sca_dict);
+            {% endfor %}
 
             // 마커 이미지의 이미지 주소입니다
             var imageSrc = "https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/markerStar.png";
 
-            scaaddress.forEach(function (address) { //추가한 코드
+            sca.forEach(function (scainfo) { //추가한 코드
                 // 주소로 좌표를 검색합니다
-                geocoder.addressSearch(address, function (result, status) {
+                geocoder.addressSearch(scainfo.address, function (result, status) {
 
                     // 정상적으로 검색이 완료됐으면
                     if (status === kakao.maps.services.Status.OK) {
@@ -79,19 +80,34 @@
                         // 결과값으로 받은 위치를 마커로 표시합니다
                         var marker = new kakao
                             .maps
-                            .Marker({map: map, position: coords, image: markerImage});
-                        /*
-                        // 인포윈도우로 장소에 대한 설명을 표시합니다 변경한 코드
-                        var infowindow = new kakao
-                            .maps
-                            .InfoWindow({
-                                content: '<div style="width:150px;text-align:center;padding:6px 0;">' + position.title +
-                                        '</div>'
-                            });
-                        infowindow.open(map, marker);
+                            .Marker({map: map, position: coords, title: scainfo.name, image: markerImage});
 
-                        // 지도의 중심을 결과값으로 받은 위치로 이동시킵니다
-                        map.setCenter(coords);*/
+
+                        // 커스텀 오버레이에 표출될 내용
+                        var content = '<div class="customoverlay">  <a href="/scainfo/all/"' +
+                                ' target="_blank">    <span class="title">'+scainfo.name+'</span>  </a></div>';
+
+
+                        // 커스텀 오버레이를 생성합니다
+                        var customOverlay = new kakao
+                            .maps
+                            .CustomOverlay({});
+
+
+                        kakao.maps.event.addListener(marker, 'click', function(mouseEvent) {
+                                                     
+                            customOverlay.setContent(content);
+                                
+                            customOverlay.setPosition(coords); 
+                            customOverlay.setMap(map);
+                            customOverlay.setyAnchor(1);
+                        });
+                        // 커스텀 오버레이를 지도에서 제거합니다 
+                        kakao.maps.event.addListener(marker, 'rightclick', function() {
+        
+                            customOverlay.setMap(null);
+                        }); 
+                        //map.setCenter(coords);
                     }
                 });
             });
