--- a/cafemapapp/templates/cafemapapp/studytest.html
+++ b/cafemapapp/templates/cafemapapp/studytest.html
@@ -8,16 +8,11 @@
     </head>
     <body>
         <h2>스터디 현황</h2>
+        <div class="studybtn" align="right">
+            <button onclick="location.href='/scamap/'">내 주변 스터디카페</button >
+        </div>
         <div id="map"></div>
 
-        <button onclick="location.href='http://3.34.49.180:8080/scamap'">내 주변 스터디카페</button >
-        <style>
-            button {
-                position: absolute;
-                top: 10%;
-                left: 71%;
-            }
-        </style>
 
         <script
             type="text/javascript"
