--- a/cafemapapp/templates/cafemapapp/test2.html
+++ b/cafemapapp/templates/cafemapapp/test2.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html>
     <head>
@@ -12,16 +10,20 @@
     </head>
     <body>
         <h2>스터디카페 찾기</h2>
+        
+        
+    
         <div id="map"></div>
-
         <button onclick="location.href='http://127.0.0.1:8000/study'">개설 스터디 현황</button >
-        <style>
-            button {
-                position: absolute;
-                top: 10%;
-                left: 71%;
-            }
-        </style>
+            {% comment %} <style>
+                button {
+                    position: relative;
+                    top: 10%;
+                    left: 71%;
+                }
+            </style> {% endcomment %}
+
+        
 
         <script
             type="text/javascript"
@@ -103,8 +105,8 @@
                         // 결과값으로 받은 위치를 마커로 표시합니다
                         var marker = new kakao
                             .maps
-                            .Marker({map: map, position: coords, image: markerImage});
-                        /*
+                            .Marker({map: map, position: coords, title: position.title, image: markerImage});
+                        
                         // 인포윈도우로 장소에 대한 설명을 표시합니다 변경한 코드
                         var infowindow = new kakao
                             .maps
@@ -115,7 +117,7 @@
                         infowindow.open(map, marker);
 
                         // 지도의 중심을 결과값으로 받은 위치로 이동시킵니다
-                        map.setCenter(coords);*/
+                        //map.setCenter(coords);
                     }
                 });
             });
