--- a/review/templates/review_write.html
+++ b/review/templates/review_write.html
@@ -20,8 +20,8 @@
             <span style="color:red">{{ field.errors }}</span>
             {% endif %}
             {% endfor %}
-            <button type="submit" class="btn btn-primary">리뷰쓰기</button>
-            <button type="button" class="btn btn-primary" onclick="location.href='/review/list/{{ review.id }}'">돌아가기</button>
+            <button type="submit" class="btn text-white" style="background-color:  #734A32;">리뷰쓰기</button>
+            <button type="button" class="btn text-white" style="background-color:  #734A32;" onclick="location.href='/review/list/{{ review.id }}'">돌아가기</button>
         </form>
     </div>
 </div>
