--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -24,7 +24,7 @@
                     <span style="color: red">{{ field.errors }}</span>
                     {% endif %}
                     {% endfor %}
-                    <button type="submit" class="btn btn-primary">로그인</button>
+                    <button type="submit" class="btn text-white" style="background-color:  #734A32;">로그인</button>
                 </form>
             </div>
         </div>
