--- a/accounts/templates/register.html
+++ b/accounts/templates/register.html
@@ -32,7 +32,7 @@
                         <label for="re_password" class="form-label">비밀번호</label>
                         <input type="password" class="form-control" id="re_password" placeholder="비밀번호 확인" name="re_password">
                     </div>
-                    <button type="submit" onclick="btn()" class="btn btn-primary">가입</button>
+                    <button type="submit" onclick="btn()" class="btn text-white" style="background-color:  #734A32;">가입</button>
                 </form>
             </div>
 
