--- a/board/templates/board_list.html
+++ b/board/templates/board_list.html
@@ -2,14 +2,16 @@
 {% block contents %}
 
 <div class = "row mt-5">
-    <div class = "col-12">
-        <table class = "table table-light">
-            <thead class = "thead-light">
+    <div class = "col-12">   
+        
+  
+        <table class = "table table-hover">
+            <thead class="table text-white" style="background-color: #734A32">
                 <tr>
-                    <th>#</th>
-                    <th>제목</th>
-                    <th>작성자</th>
-                    <th>작성시간</th>
+                   <th>번호</th></div>
+                        <th>제목</th>
+                        <th>작성자</th>
+                        <th>작성시간</th>
                 </tr>
             </thead>
             <tbody class = "text-dark">
@@ -40,7 +42,7 @@
                 {% endif %}
 
                 <li class = "page-item active">
-                    <a class = "page-link">{{boards.number}}/{{boards.paginator.num_pages}}</a>
+                    <a class = "page-link" style="background-color: #734A32; border:none">{{boards.number}}/{{boards.paginator.num_pages}}</a>
                 </li>
 
                 {% if boards.has_next %}
@@ -59,7 +61,9 @@
 
 <div class = "row">
     <div class = "col-12">
-        <button class = "btn btn-primary" onclick = "location.href = '/board/write/'">글쓰기</button>
+        <button class="btn text-white" style="background-color:  #734A32;" onclick = "location.href = '/board/write/'">글쓰기</button>
     </div>
 </div>
+
+
 {% endblock %}
