--- a/review/templates/review_list.html
+++ b/review/templates/review_list.html
@@ -3,12 +3,13 @@
 
 <div class = "row mt-5">
     <div class = "col-12">
-        <table class = "table table-light">
-            <thead class = "thead-light">
+        <table class = "table table-hover">
+            <thead class="table text-white" style="background-color: #734A32">
                 <tr>
-                    <th>#</th>
+                    <th>번호</th>
                     <th>작성자</th>
                     <th>리뷰내용</th>
+                    <th>작성시간</th>
                 </tr>
             </thead>
             <tbody class = "text-dark">
@@ -39,7 +40,7 @@
                 {% endif %}
 
                 <li class = "page-item active">
-                    <a class = "page-link">{{reviews.number}}/{{reviews.paginator.num_pages}}</a>
+                    <a class = "page-link" style="background-color: #734A32; border:none" >{{reviews.number}}/{{reviews.paginator.num_pages}}</a>
                 </li>
 
                 {% if reviews.has_next %}
@@ -58,7 +59,7 @@
 
 <div class = "row">
     <div class = "col-12">
-        <button class = "btn btn-primary" onclick = "location.href = '/review/write/'">리뷰쓰기</button>
+        <button class="btn text-white" style="background-color:  #734A32;" onclick = "location.href = '/review/write/'">리뷰쓰기</button>
     </div>
 </div>
 {% endblock %}
