홈버튼 추가, 스터디 링크 연결

--- a/cafemapapp/templates/cafemapapp/onemarker.html
+++ b/cafemapapp/templates/cafemapapp/onemarker.html
@@ -11,6 +11,8 @@
 
     </head>
     <body>
+        <div class="home">
+        <a href="/"><img class="homebtn" src="/static/images/homebtn.png"/></a></div>
         <h2>스터디카페 찾기</h2>        
 
         {% comment %} <div class="studybtn" align="right">
