--- a/cafemapapp/templates/cafemapapp/studytest.html
+++ b/cafemapapp/templates/cafemapapp/studytest.html
@@ -7,8 +7,11 @@
 
     </head>
     <body>
+        <div class="home">
+        <a href="/"><img class="homebtn" src="/static/images/homebtn.png"/></a></div>
         <h2>스터디 현황</h2>
         <div class="studybtn" align="right">
+            <button onclick="location.href='/blog/'" >목록으로 보기</button >
             <button onclick="location.href='/scamap/'">내 주변 스터디카페</button >
         </div>
         <div id="map"></div>
