--- a/scainfoapp/templates/scainfoapp/like.html
+++ b/scainfoapp/templates/scainfoapp/like.html
@@ -8,6 +8,8 @@
         <link rel="stylesheet" href='/static/css/home.css'>
     </head>
     <body>
+        <div class="home">
+        <a href="/"><img class="homebtn" src="/static/images/homebtn.png"/></a></div>
         <h2 style="text-align: center;">찜한 스터디카페 목록</h2>
         {% comment %} <div class="sort" align="right">
         <select title="" onchange="window.location.href=this.value">
