--- a/cafemapapp/static/css/studycafeMap.css
+++ b/cafemapapp/static/css/studycafeMap.css
@@ -14,8 +14,24 @@
 .customoverlay .title {display:block;text-align:center;background:#fff;margin-right:35px;padding:10px 15px;font-size:14px;font-weight:bold;}
 .customoverlay:after {content:'';position:absolute;margin-left:-12px;left:50%;bottom:-12px;width:22px;height:12px;background:url('https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/vertex_white.png')}
 
-h2 { text-align: center; }
+.homebtn{
+    width: 40px;
+    /* height: 30px; */
+}
+
+h2 { 
+    margin-top: 0;
+    margin-bottom: 10px;
+    text-align: center; 
+}
 /* body{ background-color: #D9D1C7;} */
+
+.home{
+    width: 60%;
+    margin: auto;
+    margin-bottom: 0;
+}
+
 .studybtn{
     width:60%;
     margin: auto;
