--- a/scainfoapp/static/css/detail.css
+++ b/scainfoapp/static/css/detail.css
@@ -1,4 +1,13 @@
+.homebtn{
+  width: 40px;
+  /* height: 30px; */
+}
 
+.home{
+  width: 650px;
+  margin: auto;
+  margin-bottom: 0;
+}
 
 h2 { text-align: center; }
 
