--- a/scainfoapp/templates/scainfoapp/sort_star.html
+++ b/scainfoapp/templates/scainfoapp/sort_star.html
@@ -8,6 +8,8 @@
         <link rel="stylesheet" href='/static/css/home.css'>
     </head>
     <body>
+        <div class="home">
+        <a href="/"><img class="homebtn" src="/static/images/homebtn.png"/></a></div>
         <h2 style="text-align: center;">스터디카페 목록</h2>
         
         <div class="sort" align="right">
