댓글기능새로고침x

--- a/board/templates/board_list.html
+++ b/board/templates/board_list.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block contents %}
-
+<script src="javascript/comment.js"></script>
 <div class = "row mt-5">
     <div class = "col-12">   
         
