--- a/board/templates/base.html
+++ b/board/templates/base.html
@@ -10,8 +10,8 @@
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"
   />
 
-    <link rel="stylesheet" href="static/style.css">
-
+ 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </head>
 <body>
     {% block content %} 
