마이페이지 수정

--- a/area/static/css/area.css
+++ b/area/static/css/area.css
@@ -4,6 +4,19 @@
   font-family: 'Noto Sans KR', sans-serif !important;
 }
 
+.home-btn {
+  display: block;
+  position: absolute;
+  top: 34px;
+  right: 50px;
+  /* left: 34px; */
+  /* padding-right: 10px; */
+  width: 30px;
+  height: 30px;
+  background-image: url('/static/home-img.png'); /* 집 모양 이미지 파일 경로 */
+  background-size: cover;
+}
+
 a {
     text-decoration: none !important;
     /* font-family: 'Montserrat', sans-serif  */
