--- a/area/templates/area/area.html
+++ b/area/templates/area/area.html
@@ -8,6 +8,7 @@
     <link href="/static/css/area.css" type="text/css" rel="stylesheet">
 </head>
 <body>
+    <a href="#" class="home-btn"></a>
     <nav class="minimalist-vertical-menu">
         
         <div class="minimalist-tab-menu">
