--- a/myPage/templates/myPage.html
+++ b/myPage/templates/myPage.html
@@ -11,7 +11,7 @@
 <body>
     <div class="pfl-wrapper">
         <nav id="nav">
-            <a href="/" class="home-icon"></a>
+            <a href="/" class="home-btn"></a>
         </nav>
         <article>
             <div class="profile-photo"></div>
