마이페이지 이메일 수정

--- a/myPage/templates/myPage.html
+++ b/myPage/templates/myPage.html
@@ -17,7 +17,7 @@
             <div class="profile-photo"></div>
             <div class="profile-info">
                 <h1>김아무개</h1>
-                <p>kimamugae@gmail.com</p>
+                <p>kim@gmail.com</p>
             </div>
             <div class="whatever">
                 <div class="row posts">
