마이화면위치등록추가완

--- a/myPage/templates/myPage.html
+++ b/myPage/templates/myPage.html
@@ -36,7 +36,7 @@
                         <a href=# class="inner"><h4>개최 스터디</h4></a>
                     </div>
                     <div class="col-3 tile">
-                        <a href=# class="inner"><h4>작성한 리뷰</h4></a>
+                        <a href=# class="inner" onclick="location.href='/userlocation/write/'"><h4>위치 등록하기</h4></a> 
                     </div>
                     <div class="col-3 tile">
                         <a href=# class="inner"><h4>설정</h4></a>
