위치등록, 리뷰 페이지 폰트 수정

--- a/board/templates/board_list.html
+++ b/board/templates/board_list.html
@@ -1,5 +1,8 @@
 {% extends 'base.html' %}
 {% block contents %}
+<head>
+    <link href="/static/font1.css" type="text/css" rel="stylesheet">
+</head>
 <script src="javascript/comment.js"></script>
 <div class = "row mt-5">
     <div class = "col-12">   
