--- a/board/templates/board_write.html
+++ b/board/templates/board_write.html
@@ -2,6 +2,10 @@
 
 {% block contents %}
 
+<head>
+    <link href="/static/font1.css" type="text/css" rel="stylesheet">
+</head>
+
 <div class="row mt-5">
     <div class="col-12">
         <form method="POST" action=".">
