--- a/review/templates/review_list.html
+++ b/review/templates/review_list.html
@@ -1,6 +1,10 @@
 {% extends 'base.html' %}
 {% block contents %}
 
+<head>
+    <link href="/static/font1.css" type="text/css" rel="stylesheet">
+</head>
+
 <div class = "row mt-5">
     <div class = "col-12">
         <table class = "table table-hover">
