--- a/board/templates/board_detail.html
+++ b/board/templates/board_detail.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="/static/index.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  
+    <link href="/static/font1.css" type="text/css" rel="stylesheet">
 </head>
 
 <body>
