--- a/review/templates/base.html
+++ b/review/templates/base.html
@@ -10,5 +10,6 @@
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" />
 
+    <link href="/static/font1.css" type="text/css" rel="stylesheet">
 </head>
 
