--- a/userlocation/templates/write.html
+++ b/userlocation/templates/write.html
@@ -8,6 +8,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
         <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
         <link rel="stylesheet" href="/static/style.css">
+        <link href="/static/font1.css" type="text/css" rel="stylesheet">
     </head>
     <body>
         <div class="main-title">
