--- a/scainfoapp/static/css/detail.css
+++ b/scainfoapp/static/css/detail.css
@@ -4,9 +4,21 @@
   font-family: 'Noto Sans KR', sans-serif;;
 }
 
-h3{
-  margin-bottom: 0;
+.tag{
+  width: 110px;
+  height: 40px;
+  background-color: #D9D1C7;
+  border-radius: 20px;  
+  margin-right: 15px;
+  text-align : center;
+  line-height : 40px;
+  float: left;
 }
+
+/* h3{
+  margin-bottom: 0;
+  float: left;
+} */
 
 hr{
   margin-top: 20px;
@@ -51,13 +63,39 @@ h2 { text-align: center; }
 
 } */
 .card-title{
-  position: relative;
+  /* position: relative; */
+  margin-bottom: 0;
+  float: left;
 }
 
 .like{
-  position: relative;
-  margin-right: 0;
+  /* position: relative; */
+  /* margin-left: 50px; */
+  height: 80.37px;
+  float: right;
 }
+.lb{
+  line-height: 80.37px;
+  vertical-align: middle;
+}
+.likebtn{
+  /* display:block; */
+  /* color: white; */
+  /* width: 35px; 
+  height: 35px; 
+  line-height:40px;  */
+  border:1px #734A32 solid;
+  /* margin:15px auto;  */
+  background-color:white; 
+  text-align:center; 
+  cursor: pointer;  
+  color:#333; 
+  transition:all 0.9s, color 0.3;
+}
+
+/* .address{
+  position: ;
+} */
 
 .scaimg{
     width: 590px;
@@ -74,21 +112,7 @@ select{
   background-color: rgb(242, 242, 242)
 }
 
-.likebtn{
-  display:block;
-  /* color: white; */
-  /* width: 35px; 
-  height: 35px; 
-  line-height:40px;  */
-  border:1px #734A32 solid;
-  /* margin:15px auto;  */
-  background-color:white; 
-  text-align:center; 
-  cursor: pointer;  
 
-  color:#333; 
-  transition:all 0.9s, color 0.3;
-}
 
 .likebtn:hover{
   box-shadow: 200px 0 0 0 rgba(0,0,0,0.25) inset, 
@@ -100,10 +124,10 @@ select{
   margin: auto;
 }
 
-.tag{
+/* .tag{
   width: 650px;
   margin: auto;
-}
+} */
 
 .card{
   /* background-color: #D9D1C7; */
