--- a/scainfoapp/static/css/home.css
+++ b/scainfoapp/static/css/home.css
@@ -52,9 +52,15 @@ select{
   width: 650px;
   margin: auto;
 }
+.card-title{
+  margin-top: 0;
+  margin-bottom: 10px;
+  float: left;
+}
 
 .like{
-  position: relative;
+  /* position: relative; */
+  float: right;
 }
 
 .card{
