--- a/accounts/templates/main.html
+++ b/accounts/templates/main.html
@@ -7,17 +7,16 @@
 </head>
 <body>
     <header id="header">
-        <a href="#" class="logo">SCA CONNECT</a>
+        <a href="/" class="logo">SCA CONNECT</a>
         <ul>
             {% if request.session.user %}
             <li><a href="#" class="active">주변</a></li>   
             <li><a href="#" onclick="location.href='/area/'">지역</a></li>
             <li><a href="#" onclick="location.href='/scainfo/like/'">찜</a></li>
+            <li><a href="#" onclick="location.href='/board/list/'">커뮤니티</a></li>
             <li><a href="#" onclick="location.href='/myPage/'">마이</a></li>
             <li><a href="#" onclick="location.href='/accounts/logout/'">로그아웃</a></li>
-            <li><a href="#" onclick="location.href='/board/list/'">커뮤니티</a></li>
             {% else %}
-           
             <li><a href="#" onclick="location.href='/accounts/login/'">로그인</a></li>
             <li><a href="#" onclick="location.href='/accounts/register/'">회원가입</a></li>
             {% endif %}
