--- a/board/templates/board_detail.html
+++ b/board/templates/board_detail.html
@@ -1,7 +1,5 @@
-
 {% extends 'base.html' %}
 {% block contents %}
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -13,35 +11,41 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="/static/font1.css" type="text/css" rel="stylesheet">
 </head>
-
 <body>
-
-<div class = "row mt-5">
-    <div class = "col-12">
-        <div class = "form-group">
-            <label for = "title">제목</label>
-            <input type = "text" class = "form-control" id = "title" value = "{{board.title}}" readonly>
-
-            <label for = "contents">내용</label>
-            <textarea class ="form-control" readonly>{{ board.contents }}</textarea>
-        </div>
-        <button type = "button"  class="btn text-white" style="background-color:  #734A32;" onclick = "location.href = '/board/list/'">이전으로</button>
-      
+    <div class="top-bar"
+        style="position: fixed; top: 0;
+                left: 0;
+                width: 100%;
+                background-color: white;
+                color: #324028;
+                padding: 10px;
+                z-index: 9999;
+                height: 70px;
+                border-bottom: 1px solid gainsboro;">
+        <a href="/"><img class="home-btn" src="/static/home-img.png"
+            style="display:block; position: absolute; top: 20px; right: 50px; left: 34px; width: 30px; height: 30px; background-size: cover;"/></a>        
+        <h2 style="margin-left: 80px; margin-top: 5px;">커뮤니티</h2>
     </div>
-        
-</div>
-
-
-    <div id="form-commentInfo">
-        <div id="comment-count">댓글수: <span id="count">0</span></div>
-        <input id="comment-input" placeholder="댓글을 입력해 주세요.">
-        <button id="submit" class="btn" style="background-color:#D9D1C7">등록</button>
-    </div>
-    <div id="comments">
-
+    <div class="container" style="margin-top: 150px;">
+        <div class = "row mt-5">
+            <div class = "col-12">
+                <div class = "form-group">
+                    <label for = "title">제목</label>
+                    <input type = "text" class = "form-control" id = "title" value = "{{board.title}}" readonly><br>
+                    <label for = "contents">내용</label>
+                    <textarea class ="form-control" readonly>{{ board.contents }}</textarea><br>
+                </div>
+                <button type = "button"  class="btn text-white" style="background-color:  #734A32;" onclick = "location.href = '/board/list/'">이전으로</button>
+            </div>
+            <div id="form-commentInfo" style="margin-top: 50px;">
+                <div id="comment-count">댓글수: <span id="count">0</span></div>
+                <input id="comment-input" placeholder="댓글을 입력해 주세요.">
+                <button id="submit" class="btn" style="background-color:#D9D1C7">등록</button>
+            </div>
+            <div id="comments">
+            </div>
     </div>
     <script>
-
         //1.입력받으면 입력값 초기화
         //2. 입력값 댓글로들어가기
         //3. 댓글 삭제, 수정기능
@@ -58,7 +62,7 @@
 
         //글로벌로 뺏음. 값을 저장하기 위해서.
         let idOrVoteCountList=[];
-   
+
         //타임스템프 만들기
         function generateTime(){
             const date = new Date();
@@ -78,7 +82,6 @@
         //유저이름은 8글자로 제한.
         function generateUserName(){
             let makeUsername = '익명';
-          
             
             return makeUsername;    
         }
@@ -255,10 +258,6 @@
 
 
     </script>
-
-
 </body>
 </html>
-
-
 {% endblock %}
