--- a/board/templates/board_list.html
+++ b/board/templates/board_list.html
@@ -3,70 +3,84 @@
 <head>
     <link href="/static/font1.css" type="text/css" rel="stylesheet">
 </head>
-<script src="javascript/comment.js"></script>
-<div class = "row mt-5">
-    <div class = "col-12">   
-        
-  
-        <table class = "table table-hover">
-            <thead class="table text-white" style="background-color: #734A32">
-                <tr>
-                   <th>번호</th></div>
+<body>
+    <div class="top-bar"
+        style="position: fixed; top: 0;
+                left: 0;
+                width: 100%;
+                background-color: white;
+                color: #324028;
+                padding: 10px;
+                z-index: 9999;
+                height: 70px;
+                border-bottom: 1px solid gainsboro;">
+        <a href="/"><img class="home-btn" src="/static/home-img.png"
+            style="display:block; position: absolute; top: 20px; right: 50px; left: 34px; width: 30px; height: 30px; background-size: cover;"/></a>        
+        <h2 style="margin-left: 80px; margin-top: 5px;">커뮤니티</h2>
+    </div>
+    <div class="container" style="margin-top: 150px;">
+        <div class = "row mt-5" style="display: flex; justify-content: center;">
+            <div class = "col-10">   
+                <table class = "table table-hover">
+                    <thead class="table text-white" style="background-color: #734A32">
+                        <tr>
+                        <th>번호</th>
                         <th>제목</th>
                         <th>작성자</th>
                         <th>작성시간</th>
-                </tr>
-            </thead>
-            <tbody class = "text-dark">
-                {% for board in boards %}
-                <tr onclick = "location.href = '/board/detail/{{board.id}}'">
-                    <th>{{board.id}}</th>
-                    <th>{{board.title}}</th>
-                    <th>{{board.writer}}</th>
-                    <th>{{board.registered_date}}</th>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
+                        </tr>
+                    </thead>
+                    <tbody class = "text-dark">
+                        {% for board in boards %}
+                        <tr onclick = "location.href = '/board/detail/{{board.id}}'">
+                            <th>{{board.id}}</th>
+                            <th>{{board.title}}</th>
+                            <th>{{board.writer}}</th>
+                            <th>{{board.registered_date}}</th>
+                        </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+        </div>
+        <div class = "row mt-2">
+            <div class = "col-12">
+                <nav>
+                    <ul class = "pagination justify-content-center">
+                        {% if boards.has_previous %}
+                            <li class = "page-item">
+                                <a class = "page-link" href = "?p={{boards.previous_page_number}}">이전으로</a>
+                            </li>
+                        {% else %}
+                            <li class = "page-item disabled">
+                                <a class = "page-link disabled" href = "#">이전으로</a>
+                            </li>
+                        {% endif %}
+        
+                        <li class = "page-item active">
+                            <a class = "page-link" style="background-color: #734A32; border:none">{{boards.number}}/{{boards.paginator.num_pages}}</a>
+                        </li>
+        
+                        {% if boards.has_next %}
+                            <li class = "page-item">
+                                <a class = "page-link" href = "?p={{boards.next_page_number}}">다음으로</a>
+                            </li>
+                        {% else %}
+                            <li class = "page-item disabled">
+                                <a class = "page-link disabled" href = "#">다음으로</a>
+                            </li>
+                        {% endif %}
+                    </ul>
+                </nav>
+            </div>
+        </div>
+        <div class = "row">
+            <div class = "col-12" style="display: flex; justify-content: center; margin-top: 50px;">
+                <button class="btn text-white" style="background-color: #734A32;" onclick = "location.href = '/board/write/'">글쓰기</button>
+            </div>
+        </div>
     </div>
-</div>
-<div class = "row mt-2">
-    <div class = "col-12">
-        <nav>
-            <ul class = "pagination justify-content-center">
-                {% if boards.has_previous %}
-                    <li class = "page-item">
-                        <a class = "page-link" href = "?p={{boards.previous_page_number}}">이전으로</a>
-                    </li>
-                {% else %}
-                    <li class = "page-item disabled">
-                        <a class = "page-link disabled" href = "#">이전으로</a>
-                    </li>
-                {% endif %}
-
-                <li class = "page-item active">
-                    <a class = "page-link" style="background-color: #734A32; border:none">{{boards.number}}/{{boards.paginator.num_pages}}</a>
-                </li>
-
-                {% if boards.has_next %}
-                    <li class = "page-item">
-                        <a class = "page-link" href = "?p={{boards.next_page_number}}">다음으로</a>
-                    </li>
-                {% else %}
-                    <li class = "page-item disabled">
-                        <a class = "page-link disabled" href = "#">다음으로</a>
-                    </li>
-                {% endif %}
-            </ul>
-        </nav>
-    </div>
-</div>
-
-<div class = "row">
-    <div class = "col-12">
-        <button class="btn text-white" style="background-color:  #734A32;" onclick = "location.href = '/board/write/'">글쓰기</button>
-    </div>
-</div>
-
+    <script src="javascript/comment.js"></script>
+</body>
 
 {% endblock %}
