--- a/board/templates/board_write.html
+++ b/board/templates/board_write.html
@@ -1,35 +1,49 @@
 {% extends "base.html" %}
-
 {% block contents %}
-
 <head>
     <link href="/static/font1.css" type="text/css" rel="stylesheet">
 </head>
-
-<div class="row mt-5">
-    <div class="col-12">
-        <form method="POST" action=".">
-            {% csrf_token %}
-            {% for field in form %}
-            <div class="form-group">
-                <label for="{{ field.id_for_lable }}">{{ field.label }}</label>
-                {{ field.field.widget.name }}
-                {% if field.name == 'contents' %}
-                <textarea class="form-control" name="{{ field.name }}" placeholder="{{ field.label }}"></textarea>
-                {% else %}
-                <input type="{{ field.field.widget.input_type }}" class="form-control" id="{{ field.id_for_lable }}"
-                    placeholder="{{ field.label }}" name="{{ field.name }}" />
-                {% endif %}
-            </div>
-            {% if field.errors %}
-            <span style="color:red">{{ field.errors }}</span>
-            {% endif %}
-            {% endfor %}
-         
-            <button type="submit" class="btn text-white" style="background-color: #734A32;">글쓰기</button>
-            <button type="button" class="btn text-white" style="background-color: #734A32;" onclick="location.href='/board/list/{{ board.id }}'">돌아가기</button>
-        </form>
+<body>
+    <div class="top-bar"
+        style="position: fixed; top: 0;
+                left: 0;
+                width: 100%;
+                background-color: white;
+                color: #324028;
+                padding: 10px;
+                z-index: 9999;
+                height: 70px;
+                border-bottom: 1px solid gainsboro;">
+        <a href="/"><img class="home-btn" src="/static/home-img.png"
+            style="display:block; position: absolute; top: 20px; right: 50px; left: 34px; width: 30px; height: 30px; background-size: cover;"/></a>        
+        <h2 style="margin-left: 80px; margin-top: 5px;">커뮤니티</h2>
     </div>
-</div>
-
+    <div class="container" style="margin-top: 150px;">
+        <div class="row mt-5" style="display: flex; justify-content: center;">
+            <div class="col-10">
+                <form method="POST" action=".">
+                    {% csrf_token %}
+                    {% for field in form %}
+                    <div class="form-group">
+                        <label for="{{ field.id_for_lable }}">{{ field.label }}</label>
+                        {{ field.field.widget.name }}
+                        {% if field.name == 'contents' %}
+                        <textarea class="form-control" name="{{ field.name }}" placeholder="{{ field.label }}"></textarea>
+                        {% else %}
+                        <input type="{{ field.field.widget.input_type }}" class="form-control" id="{{ field.id_for_lable }}"
+                            placeholder="{{ field.label }}" name="{{ field.name }}" />
+                        {% endif %}
+                    </div><br>
+                    {% if field.errors %}
+                    <span style="color:red">{{ field.errors }}</span>
+                    {% endif %}
+                    {% endfor %}
+                    <br>
+                    <button type="submit" class="btn text-white" style="background-color: #734A32;">글쓰기</button>
+                    <button type="button" class="btn text-white" style="background-color: #734A32;" onclick="location.href='/board/list/{{ board.id }}'">돌아가기</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</body>
 {% endblock %}
