찜디자인수정

--- a/scainfoapp/templates/scainfoapp/like.html
+++ b/scainfoapp/templates/scainfoapp/like.html
@@ -6,6 +6,9 @@
     initial-scale=1.0">
         <title>찜한 스터디카페 목록</title>
         <link rel="stylesheet" href='/static/css/home.css'>
+        <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+        <script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
+    
     </head>
     <body>
         <div class="home">
@@ -37,7 +40,7 @@
                             <form method='post' action=''>
                                 {% csrf_token %}
                                 <input type="hidden" name="like_button" value="{{sca.id}}">
-                                <span><button class="likebtn" type="submit">찜하기</button></span>
+                                <span><button id="likebtn" class="likebtn" style= "background-color:transparent; border: none;" type="submit" onclick="btn()">❤️</button></span>
                             </form> </div> <div style="clear:both;"></div>
                                              
                         
@@ -97,4 +100,14 @@
                     </div>
                     <p></p>
                 </body>
+
+                <script>
+                  
+                    
+                    function btn(){
+                        swal('찜 해제!');
+                    }
+                </script>
+
+              
             </html>
