--- a/scainfoapp/templates/scainfoapp/all.html
+++ b/scainfoapp/templates/scainfoapp/all.html
@@ -6,6 +6,8 @@
     initial-scale=1.0">
         <title>스터디카페 목록</title>
         <link rel="stylesheet" href='/static/css/home.css'>
+        <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+        <script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
     </head>
     <body>
         <div class="home">
@@ -37,8 +39,9 @@
                             <form method='post' action=''>
                                 {% csrf_token %}
                                 <input type="hidden" name="like_button" value="{{sca.id}}">
-                                <span><button class="likebtn" type="submit">찜하기</button></span>
-                            </form> </div> <div style="clear:both;"></div>
+                                <span><button id="likebtn" style= "background-color:transparent; border: none;" class="likebtn" type="submit" onclick="btn()">❤️</button></span>
+                            </form> </div> 
+                            <div style="clear:both;"></div>
                                              
                         
                         <p>{{sca.address}}</p>
@@ -96,5 +99,11 @@
                         </div>
                     </div>
                     <p></p>
+
+                <script>
+                    function btn(){
+                        swal("찜 완료");}
+                </script>
+                 
                 </body>
             </html>
